Fix openProject not waiting for project to open before applying open project state